@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.191 2005/11/27 17:07:53 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.192 2005/11/27 18:36:36 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
@@ -8,6 +8,7 @@
   wrap text in log and output view
   add vertical scrollbars
   scroll with scrollbars instead of textbuffer iter crap
+  scrollbars suck...autoscrolling the old way
 
   26 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   move partition debug button to top row so it's always visible
